@@ -1249,7 +1249,7 @@ authenticator.torrent=Torrent
 ConfigView.section.proxy.peer.same=Use same proxy settings for tracker and peer communications proxy 
 ConfigView.section.connection.network.max.simultaneous.connect.attempts=Max simultaneous outbound connection attempts
 ConfigView.section.connection.network.max.simultaneous.connect.attempts.tooltip=Max number of new outbound connection establishments Azureus should attempt any given time.\nNOTE: WindowsXP Service Pack 2 (SP2) imposes a system-wide limit of 10 simultaneous connect attempts.\nDefault value is 5.
-ConfigView.section.file.perf.cache.size.explain=The cache is used to reduce reads from/writes to disk. Unless you are using the java option '-XX:MaxDirectMemorySize' to explicitly set the memory available for cache and network IO use, you should keep this value around %1 below your maximum VM size. The current maximum VM size is %2. For instructions on how to change this, see MemoryUsage in the wiki on %3. Failure to use sensible settings will result on 'out of memory' errors.
+ConfigView.section.file.perf.cache.size.explain=The cache is used to reduce reads from/writes to disk. Unless you are using the java option '-XX:MaxDirectMemorySize' to explicitly set the memory available for cache and network IO use, you should keep this value at least %1 below your maximum VM size. The current maximum VM size is %2. For instructions on how to change this, see MemoryUsage in the wiki on %3. Failure to use sensible settings will result on 'out of memory' errors.
 MyTorrentsView.menu.setSpeed.unlimit=No limit
 MyTorrentsView.menu.setSpeed.unlimited=Unlimited
 MyTorrentsView.menu.setSpeed.disable=Disable Upload
@@ -1273,3 +1273,5 @@ ConfigView.section.tracker.client=Client
 ConfigView.section.tracker.client.connecttimeout=Connect timeout (secs)
 ConfigView.section.tracker.client.readtimeout=Read timeout (secs)
 MainWindow.menu.tools=&Tools
+FilesView.path=Path
+FilesView.remaining=Remaining pieces
